src/objects/zaapit__zaapit_editable_table2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>zaapit__Advanced_Text_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Advanced Text Search</description>
        <label>Advanced Text Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Amount_field_For_Graphs__c</fullName>
        <label>Amount field For Graphs</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__CustomActionLink__c</fullName>
        <inlineHelpText>format: link-Text~https://na14.salesforce.com/{0}/e?close=1~tool tip text(optional)
{0} is the rowID</inlineHelpText>
        <label>CustomActionLink</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__Custom_CSS__c</fullName>
        <description>Custom CSS  to control view / edit mode fields columns etc.</description>
        <inlineHelpText>Custom CSS  to control view / edit mode fields columns etc.</inlineHelpText>
        <label>Custom CSS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__DisableGeoMaps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Geo Maps for smart Instant graphs</description>
        <label>DisableGeoMaps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Disable_formula_fields_groupings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable formula fields groupings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__DupeSettings__c</fullName>
        <label>DupeSettings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__EnableFieldValueCss__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Field Value Css</description>
        <label>EnableFieldValueCss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__EnableHorizontalScroll__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnableHorizontalScroll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_Sort_Grouping2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sort Grouping2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_Sort_coloring__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Sort coloring: use Sort_color1 &amp; Sort_color2 custom labels to change the colors</description>
        <inlineHelpText>Enable Sort coloring: use Sort_color1 &amp; Sort_color2 custom labels to change the colors</inlineHelpText>
        <label>Enable Sort coloring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Enable_Sort_grouping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable_Sort_grouping</description>
        <label>Enable Sort Grouping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Exclude_Fields_From_Total__c</fullName>
        <description>Exclude Fields From Total</description>
        <inlineHelpText>Exclude Fields From Total - use # as a sepeartor</inlineHelpText>
        <label>Exclude Fields From Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__FilterReplaceLabelName__c</fullName>
        <description>Use a label for substituting none-translated pulldowns
Label format:pulldown value~translated value#pulldown value1~translated value1#</description>
        <label>FilterReplaceLabelName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__Hide_Scroll_Buttons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Scroll Buttons</description>
        <label>Hide Scroll Buttons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Hide_graph_link_on_filter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide graph link on filter</description>
        <label>Hide graph link on filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__HierarchyRelation__c</fullName>
        <description>Hierarchy Relation for {PID} parameter 
Format: table~SON Field API FIELD NAME~Father Field API FIELD NAME
Example: account~id~parentid</description>
        <inlineHelpText>Hierarchy Relation for {PID} parameter 
Format: table~SON Field API FIELD NAME~Father Field API FIELD NAME
Example: account~id~parentid</inlineHelpText>
        <label>HierarchyRelation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__LogicExtend__c</fullName>
        <inlineHelpText>EventName~classNameSpace~ClassName#EventName2~classNameSpace2~ClassName2
The Class must Implement ZPTableHandler</inlineHelpText>
        <label>LogicExtend</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__Max_rows_for_formula_grouping__c</fullName>
        <defaultValue>10000</defaultValue>
        <description>The maximum number of rows for calculating filter-groupings (large values may take more time to calculate).</description>
        <inlineHelpText>The maximum number of rows for calculating filter-groupings (large values may take more time to calculate).</inlineHelpText>
        <label>Max rows for formula grouping</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__MaximumRowsMassDeleteAll__c</fullName>
        <defaultValue>5000</defaultValue>
        <description>Maximum Rows for Mass Delete All (will delete the first x rows), this option is used for limiting the number of rows so when deleting the won&apos;t exceed Salesforc&apos;s limits.</description>
        <label>MaximumRowsMassDeleteAll</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__More_Actions_Link__c</fullName>
        <label>More Actions Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__More_Actions_win_width__c</fullName>
        <description>empty this field for auto-with</description>
        <label>More Actions win width</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__NumberOfNewRows__c</fullName>
        <defaultValue>10</defaultValue>
        <description>The number of new empty rows to add on default</description>
        <label>NumberOfNewRows</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__Open_TextArea_in_a_dialog__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Open Text Area in a dialog</description>
        <label>Open TextArea in a dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__PutFieldOnRowCSSClass__c</fullName>
        <label>PutFieldOnRowCSSClass</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__ShowRefreshLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Refresh Link</description>
        <label>ShowRefreshLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Show_All_Rows_in_query__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show All Rows in query  includes archived and deleted rows (ALL ROWS)</description>
        <label>Show All Rows in query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Show_Hover_Preview_On_Name_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show hover preview on name field</description>
        <label>Show hover preview on name field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Show_Mass_Updae_on_view_mode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Mass Updae on view mode</description>
        <label>Show Mass Updae on view mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__Show_column_filter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show column filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__SortBy3__c</fullName>
        <label>Sort By #3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__Using_Scope__c</fullName>
        <description>USING SCOPE:
Delegated
Filter for records delegated to another user for action. For example, a query could filter for only delegated Task records.
Everything
Filter for all records.
Mine
Filter for records owned by the user running the query.
My_Territory
Filter for records in the territory of the user running the query. This option is available if territory management is enabled for your organization.
My_Team_Territory
Filter for records in the territory of the team of the user running the query. This option is available if territory management is enabled for your organization.
Team
Filter for records assigned to a team, such as an Account team.</description>
        <label>Using Scope</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__buttons2__c</fullName>
        <description>add custom javascript buttons
name~javascript#name~javascript#name~javascript#.....</description>
        <inlineHelpText>add custom javascript buttons</inlineHelpText>
        <label>buttons2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__buttons__c</fullName>
        <description>add custom javascript buttons
name~javascript#name~javascript#name~javascript#.....</description>
        <inlineHelpText>add custom javascript buttons</inlineHelpText>
        <label>buttons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__columnsWidth__c</fullName>
        <label>columnsWidth</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__customLinksOnReadMode2__c</fullName>
        <label>customLinksOnReadMode2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__customLinksOnReadMode__c</fullName>
        <description>Format: salesforce_field~salesforce_field_ID#salesforce_field~salesforce_field_ID..
The &quot;salesforce_field_ID&quot; will be the link on the text of &quot;salesforce_field&quot;</description>
        <inlineHelpText>Format: salesforce_field~salesforce_field_ID#salesforce_field~salesforce_field_ID..
The &quot;salesforce_field_ID&quot; will be the link on the text of &quot;salesforce_field&quot;</inlineHelpText>
        <label>customLinksOnReadMode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__disable_autosave_views__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Disable auto save views</description>
        <label>disable_autosave_views</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__export_to_url__c</fullName>
        <description>export_to_url, empty is disable
example: https://zaapit.xxx.visual.force.com
Use this option only with custom developments / communities...</description>
        <label>export_to_url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__external_CSS_include__c</fullName>
        <label>external_CSS_include</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__external_JS_include__c</fullName>
        <label>external_JS_include</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__extraConditionFilter2__c</fullName>
        <description>extends extraConditionFilter</description>
        <label>extraConditionFilter2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__extraConditionFilter__c</fullName>
        <inlineHelpText>Write a SQL (SOQL) optional condition.
Example: price&gt;0</inlineHelpText>
        <label>extraConditionFilter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__fields2__c</fullName>
        <description>the second field the holds the fields</description>
        <label>fields2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__fieldsHeaders2__c</fullName>
        <label>fieldsHeaders2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__fieldsHeaders__c</fullName>
        <description>Specify your own first row headers - leave empty to use the default, a must: number of fields=number of field headers. format: salesforce_field~new header#salesforce_field~new header#....</description>
        <inlineHelpText>Specify your own first row headers - leave empty to use the default, a must: number of fields=number of field headers. format: salesforce_field~new header#salesforce_field~new header#....</inlineHelpText>
        <label>fieldsHeaders</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__fields__c</fullName>
        <description>The field to display in the editable table, use &apos;#&apos; as a field separator, use the original field API name</description>
        <inlineHelpText>The field to display in the editable table, use &apos;#&apos; as a field separator, use the original field API name</inlineHelpText>
        <label>fields</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__freezeColumnNum__c</fullName>
        <defaultValue>1</defaultValue>
        <label>freezeColumnNum</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__freezeColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>freezeColumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideAddRow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Add Row button on edit mode</description>
        <label>hideAddRow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideChooseATableLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Choose A Table Link (on top right)</description>
        <label>hideChooseATableLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideCustomizeLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Customize Link</description>
        <label>hideCustomizeLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideEditButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Edit Button</description>
        <label>hideEditButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideEditDelColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide edit &amp; delete links on read-only column</description>
        <label>hideEditDelColumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideItemsPerPage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hideItemsPerPage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideNewAndDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide New &amp; Delete Buttons on edit mode</description>
        <label>hideNewAndDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hidePageNumberConfirm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide page number confirm pop up when in related list mode</description>
        <inlineHelpText>Hide page number confirm pop up when in related list mode</inlineHelpText>
        <label>hidePageNumberConfirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hidePageNumbers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hidePageNumbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideTopFilterSave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hideTopFilterSave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hideTotalsRow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Totals Row</description>
        <label>hideTotalsRow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hide_chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hide_chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__hide_multi_value_filters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide multi value filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__include_page_load_params__c</fullName>
        <description>include page load prams separated by #.</description>
        <label>include page load params</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__include_page_name__c</fullName>
        <description>Page to include on the top of the table.</description>
        <inlineHelpText>Page to include on the top of the table.</inlineHelpText>
        <label>include page name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__isEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit - Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__loadfilter_maxResRows__c</fullName>
        <defaultValue>250</defaultValue>
        <label>loadfilter maxResRows</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__mainFieldSubQueryPre__c</fullName>
        <label>mainFieldSubQueryPre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__maxRowToExport__c</fullName>
        <defaultValue>2000</defaultValue>
        <description>The maximum amount of rows to export</description>
        <label>maxRowToExport</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__maxRowsOnPage__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Max rows on page  - footer selector</description>
        <label>maxRowsOnPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__maxRowsPerPage__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Maximum displayed rows</description>
        <inlineHelpText>Maximum displayed rows</inlineHelpText>
        <label>maxRowsPerPage</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zaapit__newRecordLinkNum__c</fullName>
        <description>003 is for contact - newRecordLinkNum
006 is for opportunity
press a regular new and see</description>
        <label>newRecordLinkNum</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__new_record_link__c</fullName>
        <inlineHelpText>use {ID} in the url for the current parentid (usefull for related lists)</inlineHelpText>
        <label>new record link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__removeAutoNameFromExport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Remove Auto Name field From Export (for no-name tables)</description>
        <label>removeAutoNameFromExport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showCheckBoxes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>show Check Boxes next to the actions</description>
        <inlineHelpText>show Check Boxes next to the actions</inlineHelpText>
        <label>showCheckBoxes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showCountOnExport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showCountOnExport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showDeleteSelectedViewMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show Delete Selected on View Mode</description>
        <label>showDeleteSelectedViewMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showExport__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Export button to Excel, pdf &amp; word</description>
        <label>showExport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showMassDeleteAll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show mass delete all button</description>
        <label>showMassDeleteAll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showMassDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showMassDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showQuarterField__c</fullName>
        <description>Show Quarter Field - of type date to show only the current/selected quarter</description>
        <label>showQuarterField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__showRegButtons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showRegButtons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showTopTaskLinksSAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>showTopTaskLinksSAM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__showUserGuideLink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show User Guide Link on the top of table</description>
        <label>showUserGuideLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__soqlSubQueryPre__c</fullName>
        <description>Example: select email from leads group by email having count()&gt;1</description>
        <label>soqlSubQueryPre</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__sortBy2__c</fullName>
        <label>Sort By #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortBy__c</fullName>
        <description>Sort By field name.</description>
        <label>sortBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortDir2__c</fullName>
        <label>sortDir2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortDir3__c</fullName>
        <label>sortDir3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__sortDir__c</fullName>
        <description>Sort direction ascending / descending</description>
        <inlineHelpText>Sort direction ascending / descending.
Put asc/desc</inlineHelpText>
        <label>sortDir</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__table__c</fullName>
        <description>The real table to use</description>
        <label>table</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__table_ref__c</fullName>
        <label>table_ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__title__c</fullName>
        <description>The table title</description>
        <inlineHelpText>The table title</inlineHelpText>
        <label>title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__tools_link__c</fullName>
        <label>tools link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zaapit__topChartsFields__c</fullName>
        <description>Auto open the charts for the fields inside this fields.
Example: field1#field2....</description>
        <label>topChartsFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zaapit__turnOnScrollModeForRLNTabs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn On Scroll Mode For related lists &amp; Sub-Tabs</description>
        <label>turnOnScrollModeForRLNTabs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zaapit__useSmallTableFont__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When &quot;marked&quot; that entire table will be displayed in small font (8pt).
This feature will help you to display large amount of data</description>
        <inlineHelpText>When &quot;marked&quot; that entire table will be displayed in small font (8pt).</inlineHelpText>
        <label>useSmallTableFont</label>
        <type>Checkbox</type>
    </fields>
    <label>zaapit_editable_table2</label>
</CustomObject>